--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,22 +5,39 @@
           <div class="col-lg-4 mx-auto">
             <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
             <div class="auto-form-wrapper">
-              <form action="#">
+              <form (ngSubmit)="login(f.value)" #f="ngForm" action="#">
+
                 <div class="form-group">
                   <label class="label">Usuario</label>
                   <div class="input-group">
-                    <input type="email" class="form-control" placeholder="Email">
+
+                    <input type="email"
+                    class="form-control"
+                    placeholder="Email"
+                    name="email"
+                    ngModel
+                    required>
+
                     <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
                       </span>
                     </div>
+
                   </div>
                 </div>
+
                 <div class="form-group">
                   <label class="label">Contraseña</label>
                   <div class="input-group">
-                    <input type="password" class="form-control" placeholder="*********">
+
+                    <input type="password"
+                    class="form-control"
+                    placeholder="*********"
+                    name="password"
+                    ngModel
+                    required>
+
                     <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
@@ -28,8 +45,9 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="form-group">
-                  <button class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button [disabled]="!f.valid" class="btn btn-primary submit-btn btn-block">Login</button>
                 </div>
 
 
