--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -41,9 +41,9 @@
     </li>
 
     <li class="nav-item puntero" routerLink="/login">
-      <a class="nav-link cursor">
+      <a (click)="logaout()" class="nav-link cursor">
         <i class="menu-icon fa fa-sign-out-alt"></i>
-        <span class="menu-title">Cerrar sesión</span>
+        <span class="menu-title" >Cerrar sesión</span>
       </a>
     </li>
 
