--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -47,7 +47,11 @@
                 </div>
 
                 <div class="form-group">
-                  <button [disabled]="!f.valid" class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button *ngIf="!cargando" [disabled]="!f.valid" class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button *ngIf="cargando" [disabled]="true" class="btn btn-primary submit-btn btn-block">
+                    Por favor espere ....
+                    <i class="fa fa-spin fa-sync"></i>
+                  </button>
                 </div>
 
 
