seccion 9 lista: funcionalidad de ingreso y egreso realizada

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,9 +9,11 @@
           </div>
 
           <div class="text-wrapper">
-            <p class="profile-name">Cristobal Colón</p>
+            <p class="profile-name">{{ nombre }}</p>
             <div>
               <small class="designation text-muted">Gerente</small>
+              <br>
+              <small class="designation text-muted"> {{ email }}</small>
             </div>
           </div>
         </div>
