--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,21 @@
             </thead>
 
             <tbody>
-              <tr>
-                <td>Descripción</td>
-                <td>Monto</td>
-                <td>Tipo</td>
-                <td>acciones</td>
+              <tr *ngFor="let item of items ">
+                <td>{{ item.descripcion | titlecase}}</td>
+                <td>{{ item.monto | currency}}</td>
+                <td>
+                  <span [ngClass]="{'text-success': item.tipo === 'ingreso',
+                                    'text-danger': item.tipo === 'egreso'}">
+                    {{ item.tipo }}
+                  </span>
+                  </td>
+                <td>
+                  <button class="btn btn-danger" (click)="borrarItem(item)"> Eliminar
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </td>
+
               </tr>
             </tbody>
 
