--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,14 +7,15 @@
             Especifique el monto y el tipo
           </p>
 
-          <form>
+          <form [formGroup]="form" (ngSubmit)="crearIngresoEgreso($event)">
 
             <div class="form-group">
               <label>Descripción</label>
               <input type="text"
                       class="form-control"
                       placeholder="Descripción"
-                      name="descripcion">
+                      name="descripcion"
+                      formControlName="descripcion">
             </div>
 
             <div class="form-group">
@@ -22,31 +23,31 @@
                 <input type="number"
                       class="form-control"
                       placeholder="Monto"
-                      name="monto">
+                      name="monto"
+                      formControlName="monto">
                   <p>
                     Debe de ser un monto positivo
                   </p>
               </div>
 
-            <div class="form-group">
+            <div class= "form-group">
                 <label>Tipo</label>
                 <br>
-                <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-                <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+                <button (click)="tipo ='egreso'" *ngIf="tipo === 'ingreso'" type="button"  class="btn btn-primary btn-block">Ingreso</button>
+                <button (click)="tipo ='ingreso'" *ngIf="tipo === 'egreso'" type="button" class="btn btn-warning btn-block">Egreso</button>
             </div>
 
             <hr>
-            <button type="button" class="btn btn-success mr-2">
+            <button [disabled]="form.invalid" *ngIf="!cargando" type="submit" class="btn btn-success mr-2">
               <i class="fa fa-save"></i>
               Agregar
             </button>
 
-            <!--
-              <button disabled class="btn btn-success mr-2">
+
+              <button disabled *ngIf="cargando" class="btn btn-success mr-2">
                 <i class="fa fa-spin fa-sync"></i>
                 Espere por favor...
               </button>
-            -->
 
             <button type="reset" class="btn btn-light">Cancelar</button>
 
